<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_dive_center"
            android:icon="@drawable/dive"
            android:title="@string/menu_dive_center" />
        <item
            android:id="@+id/nav_sail_center"
            android:icon="@drawable/sail"
            android:title= "@string/menu_sail_center" />
        <item
            android:id="@+id/nav_our_spots"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title= "@string/menu_spots" />
    </group>

    <item android:title="@string/menu_rules">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_courses"
                android:icon="@drawable/id_card"
                android:title="@string/menu_courses" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about" />
            </group>
        </menu>
    </item>

</menu>
