<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:id="@+id/item_liveboards">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

    <LinearLayout
        android:background="@drawable/loading_shape"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_subaa_image"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/liveaboard" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_liveboards_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_liveaboard"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_liveaboard" />

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:background="@drawable/loading_shape"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/scuba_id"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/scuba" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_scuba"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_scuba" />

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:background="@drawable/loading_shape"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="400dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/snorkeling_id"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/snorkeling" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_snorrkeling"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_snorkeling" />

        </LinearLayout>
    </LinearLayout>



        <LinearLayout
            android:background="@drawable/loading_shape"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_marginTop="600dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/paddle_id"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/paddle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_paddle"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_paddle" />

            </LinearLayout>
        </LinearLayout>


    </FrameLayout>

</ScrollView>