<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sail_row_item">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_shape"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:src="@drawable/yacht" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_yacht"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:textColor="@color/white2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_yacht" />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_shape"
            android:layout_marginTop="420dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:src="@drawable/sailing" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sailing"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white2"
                    android:text="@string/text_sailing" />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_shape"
            android:layout_marginTop="830dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:src="@drawable/boat" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_boat"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white2"
                    android:text="@string/text_boat" />
            </LinearLayout>
        </LinearLayout>




    </FrameLayout>

</ScrollView>