<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dive_row_items2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_shape"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:src="@drawable/liveaboard" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_liveaboard"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:textColor="@color/white2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_liveaboard" />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_shape"
            android:layout_marginTop="420dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:src="@drawable/scuba" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/item_liveboards_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_scuba"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white2"
                    android:text="@string/text_scuba" />

            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_shape"
            android:layout_marginTop="830dp"
            android:layout_marginBottom="30dp"

            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:src="@drawable/snorkeling" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_snorrkeling"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white2"
                    android:text="@string/text_snorkeling" />
            </LinearLayout>
        </LinearLayout>




    </FrameLayout>

</ScrollView>